main.css
@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Noto+Color+Emoji&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');

* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
	font-size: 14px;
}

body {
	background-color: #F3f0e7;
	font-family: Noto Sans;
}

h1,
h2,
h3 {
	margin: 20px 0;
	text-align: center;
}

h1 {
	font-size: 4rem;
}

h2 {
	font-weight: 200;
	font-size: 3rem;
}

h3 {
	font-size: 3rem;
}

h1,
h3 {
	color: #be3939;
	font-family: Comfortaa;
}

h2 {
	color: #747474;
}

h3 a {
	font-size: 3rem;
	color: #747474;
}

a {
	text-decoration: none;
	color: #be3939;
	font-size: 1.2rem;
}

p {
	color: #747474;
	line-height: 2rem;
	font-size: 1.2rem;
	margin: 0 0 10px 0;
}

header {
	display: flex;
	align-items: center;
	justify-content: center;
	margin: 60px 0;
}

header div {
	width: 800px;
	display: flex;
	flex-direction: column;
	align-items: center;
}

header img {
	max-width: 300px;
	margin: 0 0 20px 0;
}

nav {
	display: flex;
}

li {
	list-style: none;
}

nav li:not(:first-child) {
	margin: 0 0 0 40px;
}

nav li a {
	color: #747474;
}

#landing,
#about,
#gallery,
#resources,
.article {
	margin: 0 10vw;
	display: flex;
	justify-content: center;
	align-items: center;

}

.wrapper {
	width: 800px;
	display: flex;
	flex-direction: column;
}

.wrapper img {
	width: 100%;
	max-width: 800px;
	border-radius: 1rem;
	margin: 40px 0;
}

#notice {
	font-weight: bold;
	background-color: #be3939;
	color: #F3f0e7;
	text-align: center;
	padding: 4px 0;
}

#gallery img:not(:first-child) {
	margin: 60px 0 0 0;
}

#resources li {
	list-style-type: disc;
	color: #747474;
	margin-top: 20px;
}

.recipe li {
	list-style-type: disc;
	font-size: 1.2rem;
	color: #747474;
	margin-top: 10px;
}

.recipe hr {
	background-color: #dad5c8;
	height: 4px;
	border: none;
	border-radius: 4px;
}

.recipe h2,
.recipe h3 {
	text-align: left;
}

.recipe h3 {
	margin-top: 50px;
}

.tip {
	/*background-color: #dad5c8;*/
	border-radius: 0.3rem;
	border-left: 5px solid #be3939;
	margin-bottom: 20px;
}

.tip h4 {
	/*background-color: #be3939;*/
	color: #be3939;
	padding: 15px 0 5px 15px;
	border-radius: 10px 10px 0 0;
}

.tip p {
	padding-left: 15px;
}

footer {
	height: 200px;
	display: flex;
	justify-content: center;
	align-items: center;
}

footer p {
	text-align: center;
	color: #be3939;
}

